[Fetch API] Blob type should be set from Response/Request contentType header https://bugs.webkit.org/show_bug.cgi?id=161228

Patch by Youenn Fablet <youenn@apple.com> on 2016-08-27
Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

* web-platform-tests/fetch/api/request/request-consume.html:
* web-platform-tests/fetch/api/request/request-headers-expected.txt:
* web-platform-tests/fetch/api/request/request-headers.html:
* web-platform-tests/fetch/api/response/response-consume-expected.txt:
* web-platform-tests/fetch/api/response/response-consume.html:
* web-platform-tests/fetch/api/response/response-init-002-expected.txt:
* web-platform-tests/fetch/api/response/response-init-002.html:

Source/WebCore:

Covered by updated tests.

Renaming FetchBody::m_mimeType to m_contentType since that better relates to Content-Type header.
Updated FetchRequest and FetchResponse to set m_contentType according request/response headers.
Handled the case of a Request created from JS, a Response created from JS and a Response created internally to
be used as resolve value in the fetch promise.

In case Content-Type is set but is empty, its empty value should be used for blob type.
Updated contentType checks to use isNull in lieu of isEmpty.

* Modules/fetch/FetchBody.cpp:
(WebCore::FetchBody::updateContentType): Routine to synchronize headers with m_contentType.
(WebCore::FetchBody::FetchBody): Renamed m_mimeType to m_contentType.
(WebCore::FetchBody::blob): Ditto.
* Modules/fetch/FetchBody.h: Ditto.
(WebCore::FetchBody::contentType):
(WebCore::FetchBody::setMimeType): Deleted.
(WebCore::FetchBody::mimeType): Deleted.
* Modules/fetch/FetchRequest.cpp:
(WebCore::FetchRequest::setBody): set FetchBody::m_contentType according HTTP headers.
* Modules/fetch/FetchResponse.cpp:
(WebCore::FetchResponse::initializeWith): Ditto.
(WebCore::FetchResponse::BodyLoader::didReceiveResponse): Ditto.

Canonical link: https://commits.webkit.org/179450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205076 268f45cc-cd09-0410-ab3c-d52691b4dbfc